--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.username=${DB_UN:root}
 spring.datasource.password=${DB_PWD:root}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+admin.email=${ADMIN_EMAIL:admin@ecom.com}
+admin.password=${ADMIN_PASSWORD:admin}
+admin.mobile=${ADMIN_MOBILE:0}
+admin.username=${ADMIN_USERNAME:ADMIN}
