--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
     <version>0.13.0</version>
     <scope>runtime</scope>
 </dependency>
+<dependency>
+    <groupId>com.razorpay</groupId>
+    <artifactId>razorpay-java</artifactId>
+    <version>1.4.8</version>
+    <scope>compile</scope>
+</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
